2009-05-22  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-zero.patch
	(vmError.cpp): Don't include interpreterRuntime.hpp here.
	* ports/hotspot/src/cpu/zero/vm/stackPrinter_zero.hpp
	Include interpreterRuntime.hpp and scopeDesc.hpp.
	(ZeroStackPrinter::print_word): Decode pc to get bci.

2009-05-21  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkCompiler.cpp:
	Fix for x86 debug builds.

2009-05-27  Andrew John Hughes  <ahughes@redhat.com>

	* HACKING: Updated.
	* Makefile.am:
	Add new patch, move openjdk7 patch to be
	with others.
	* patches/cacao/no-strict-aliasing.patch:
	New patch to fix CACAO build on GCC 4.4 (see PR129).
	* patches/cacao/openjdk7.patch:
	Fixed paths to match other patches.

2009-06-03  Xerxes Rånby  <xerxes@zafena.se>
	    Stefan Ring  <stefan@complang.tuwien.ac.at>

	* patches/cacao/native-resolve.patch: New.
	* patches/cacao/xxoption-warning.patch: Likewise.
	* Makefile.am (ICEDTEA_PATCHES): Apply above patches.
	* HACKING: Update.

2009-05-30  Mark Wielaard  <mark@klomp.org>

	* configure.ac (enable-nio2): Removed.
	* Makefile.am (ICEDTEA_PATCHES): Remove patches/icedtea-nio2.patch.
	(stamps/overlay.stamp): Don't copy overlays/nio2.
	* patches/icedtea-nio2.patch: Removed.
	* overlays/nio2/*: Removed.

2009-05-27  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Remove netx target as conflicts with
	directory when building in the source tree.
	* configure.ac:
	Bump to 1.10 proper.

2009-05-27  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS:
	Add IcedTea7 1.10 release notes.
	* README:
	Updated.  Remove notes on binary plugs which
	are no longer an issue.  Highlight the addition
	of javaws, plugin and additional architecture support
	by IcedTea.

2009-05-27  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-liveconnect-dist.patch:
	Recreated with netx.patch applied.

2009-05-27  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Only distribute liveconnect code when